--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   swipeable_card_stack: ^0.0.5
   animated_widgets: ^1.0.0
   animations: ^2.0.1
+  sqflite: any
+  path_provider: any
 
 
   # The following adds the Cupertino Icons font to your application.
