--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   animated_widgets: ^1.0.0
   animations: ^2.0.1
   sqflite: any
+  sqflite_common_ffi: ^2.0.0
   path_provider: any
 
 
