--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   swipeable_card_stack: ^0.0.5
-  animated_widgets: ^1.0.0
+  animated_widgets: ^1.1.0
   animations: ^2.0.1
   sqflite: any
-  sqflite_common_ffi: ^2.0.0
+  sqflite_common_ffi: ^2.2.5
   path_provider: any
+  firebase_core: "^2.15.0"
 
 
   # The following adds the Cupertino Icons font to your application.
