--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,12 @@
+
+plugins {
+  id("com.android.application")
+
+  // Add the Google services Gradle plugin
+  id("com.google.gms.google-services")
+
+}
+
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -68,6 +77,8 @@ flutter {
     source '../..'
 }
 
+
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // Import the Firebase BoM
@@ -76,17 +87,12 @@ dependencies {
 
   // TODO: Add the dependencies for Firebase products you want to use
   // When using the BoM, don't specify versions in Firebase dependencies
-  implementation("com.google.firebase:firebase-analytics-ktx")
+  implementation 'com.google.firebase:firebase-analytics-ktx'
 
 
   // Add the dependencies for any other desired Firebase products
   // https://firebase.google.com/docs/android/setup#available-libraries
 }
 
-plugins {
-  id("com.android.application")
 
-  // Add the Google services Gradle plugin
-  id("com.google.gms.google-services")
 
-}
