--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,3 @@
-
-
-
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
@@ -9,10 +6,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.15' //
     }
-    
 }
 
 allprojects {
@@ -30,7 +27,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
-
