--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   animations: ^2.0.1
   sqflite: any
   sqflite_common_ffi: ^2.2.5
-  path_provider: any
-  firebase_core: "^2.15.0"
+  path_provider: 2.0.15
+  firebase_core: ^2.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
